--- a/tex/kap-frekvenser.tex
+++ b/tex/kap-frekvenser.tex
@@ -1,3 +1,9 @@
+\chapter{Frekvenslistor}
+
+Här hittar du frekvenslistor för ett stort gäng olika radioanvändare från Marin VHF och MF/HF till kanaler för jakt och kortdistansradio, amatörradiobandplaner, amatörradiofyrar,  med mera.
+
+\clearpage
+
 \section{Frekvenser VHF--UHF}
 
 \subsection{Frekvenser ej amatörradio}
@@ -10,7 +16,7 @@ själv kontrollera bestämmelserna innan en frekvens brukas.
 
 Effekten i tabellen är ustrålad effekt PEP om inte annat anges.
 
-\subsubsection{Jaktfrekvenser 31 MHz}
+\subsection{Jaktfrekvenser 31 MHz}
 % Frekvenser uppdaterade 250428
 
 Frekvenserna på detta band var tidigare till för enbart jakt. I dag är
@@ -59,7 +65,7 @@ smula oordnad.
 	           31,170 & Jakt 31*           &                   &   31,370          &                    &
 \end{longtable}
 
-\subsubsection{Åkeribandet 69 MHz öppet för PMR}
+\subsection{Åkeribandet 69 MHz öppet för PMR}
 
 Sedan några år tillbaka finns nu ett nytt band som kan användas för privat
 landmobil radio (PMR). Bandet kallas allmänt för 69\,MHz-bandet och har blivit
@@ -108,7 +114,7 @@ inom Västra Götaland och Hallands län.
 \caption{Frekvenser 69 MHz}
 \end{table}
 
-\subsubsection{Jakt och jordbruksfrekvenser 155 MHz}
+\subsection{Jakt och jordbruksfrekvenser 155 MHz}
 
 Observera att kanalnumren som är traditionella och frekvenserna inte
 kommer helt i ordning. Fyra kanaler är markerade med $^R$ och har
@@ -140,7 +146,7 @@ särskilda restriktioner på svenskt innanvatten och territorialvatten.
 \end{itemize}
 \normalsize
 
-\subsubsection{Öppna PMR-bandet på 446 MHz}
+\subsection{Öppna PMR-bandet på 446 MHz}
 
 I nya författningssamlingen står det uttryckligen att
 repeateranvändning är förbjuden. De exakta kanalerna har också inte
@@ -181,7 +187,7 @@ användas för att inte störa närliggande kanaler. Kanalrastret är
 \label{tab:pmr-frekvenser}
 \end{table}
 
-\subsubsection{Kortdistansradio (KDR, SRBR)}
+\subsection{Kortdistansradio (KDR, SRBR)}
 
 Kallas även SRBR för Short Range Business Radio.  Den traditionella
 frekvenslistan ser ut som följer. En ny variant med frekvenser för
@@ -247,7 +253,7 @@ Kanalraster. Denna frekvenstabell blir lite mer komplicerad.
 \label{tab:SRBR-frekvenser}
 \end{table}
 
-\subsection{Marina VHF-frekvenser}
+\section{Marina VHF-frekvenser}
 
 Marinbandet på VHF består både av duplex- och
 simplexkanaler. Simplexkanalerna används skepp-till-skepp och även
@@ -257,7 +263,7 @@ liknande. På dessa arbetskanaler sänder man även ut sjörapporter,
 navigationsvarningar och annan information t.ex. säkerhetsvarningar
 som är viktiga för sjöfarten.
 
-\subsubsection{Kanalnummer och frekvens marina VHF-kanaler}
+\subsection{Kanalnummer och frekvens marina VHF-kanaler}
 
 \begin{table}[H]
 \centering
@@ -324,7 +330,7 @@ Kanalerna L1--L2 är frekvenser avsedda för fritidsbåtar (Leisure) och
 frekvenserna F1--F3 osv är avsedda för yrkesfiske. L1 och L2 delas med
 kanal 3 och 4 på jaktradion vilket kan vara bra att känna till.
 
-\subsubsection{Transponderkanaler}
+\subsection{Transponderkanaler}
 \begin{longtable}{rrl}
 	\textbf{Kanal} & \textbf{Skepp} & \textbf{Not} \\ \hline
 	   \endhead
@@ -332,7 +338,7 @@ AIS1 & 161,975 & Digital trafik, transponder\\
 AIS2 & 162,025 & Digital trafik, transponder\\
 \end{longtable}
 
-\subsubsection{Stockholm radio}
+\subsection{Stockholm radio}
 % Frekvenser kontrollerade 250428
 % Ett antal felaktigheter fixade
 
@@ -393,13 +399,13 @@ Motala    & 62 & 47 & Hjälmaren   & $\dagger$   &    \\
 
 $\dagger$) Hjälmaren är permanent tagen ur drift.
 
-\subsection{Frekvenser amatörradio VHF--UHF}
+\section{Frekvenser amatörradio VHF--UHF}
 
 I denna skrift försöker vi omfatta de viktigaste VHF och UHF-banden
 för amatörradio vilket inkluderar 6\,m-bandet, 2\,m-bandet,
 70\,cm-bandet och 23\,cm-bandet.
 
-\subsubsection{Kanalnumrering VHF/UHF}
+\subsection{Kanalnumrering VHF/UHF}
 
 Denna typ av kanalnumrering är överenskommen inom IARU region 1 för
 6\,m, 2\,m och 70\,cm banden på
@@ -440,7 +446,7 @@ bandplanerna i den region man är.
   tacksamt mot. Maila mig på anders@sikvall.se om du har korrekt
   information.}
 
-\subsubsection{Införande av 12.5\,kHz kanalavstånd}
+\subsection{Införande av 12.5\,kHz kanalavstånd}
 
 För ett antal år sedan beslutade man sig att gå mot ett smalare
 kanalraster på VHF och UHF och införde härmed kanalavstånd på 12.5~kHz
@@ -466,7 +472,7 @@ M & 1240,000 & 25 & -6000 \\
 \caption{Kanalavstånd och beteckning olika frekvensband}
 \end{table}
 
-\subsubsection{FM-kanaler 6m-bandet}
+\subsection{FM-kanaler 6m-bandet}
 
 \begin{longtable}{rrl|rrl}
 \textbf{Kanal} & \textbf{Tidigare} & \textbf{Anm}
@@ -498,7 +504,7 @@ M & 1240,000 & 25 & -6000 \\
 	51,740 &      F74 &       & 51,990 &     RF99 &
 \end{longtable}
 
-\subsubsection{FM-kanaler 2m-bandet}
+\subsection{FM-kanaler 2m-bandet}
 
 \begin{longtable}{rrl|rrl}
 
@@ -539,7 +545,7 @@ rikligt t.ex. i Tyskland med S20 som anropsfrekvens (eller
 aktivitetscenter som det numera kallas).
 
 
-\subsubsection{FM-kanaler 70cm-bandet}
+\subsection{FM-kanaler 70cm-bandet}
 
 \begin{longtable}{rrl|rrl}
 \textbf{Frekvens} & \textbf{Kanal} & \textbf{Anm} &
@@ -606,43 +612,10 @@ körde många amatörer 70cm genom frekvenstrippling från 2m. $144,000
 man till och med hade bredare kanalraster de-facto.
 
 
-\clearpage %%% Layout
-
-\subsection{Scouters frekvenser, JOTA}
-
-Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA},
-förekommer några gånger per år. Här är en sammanställning av de
-standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp
-motstationer själva. Scouter kan antingen ha egna signaler, köra under
-tillfälliga signaler eller vara second operator åt med någon klubbsignal.
-
-\subsection{Nordiska scoutfrekvenser VHF}
-
-\begin{center}
-\begin{tabular}{lrr}
-	\textbf{Mode} & \textbf{Frekvens} & \textbf{Kanal} \\ \hline
-	FM            &      145.425  MHz &   V34 \\
-	SSB           &      144.240  MHz &  \\
-	CW            &      144.050  MHz &
-\end{tabular}
-\end{center}
-
-Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år.
-Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten
-till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar
-på söndagseftermiddagen.
-
-Sändningar under denna tid förekommer från ocertifierade scouter som lånar
-klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda
-sändaramatörer ut sina signaler.
-
-Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör
-men var beredd på att det kommer vara en viss ovana och ske en del misstag.
-Strunta i det och ge scouterna en kul radioupplevelse.
-
-\scriptsize
 \subsection{Repeatrar, länkar och fyrar VHF/UHF}
-\subsubsection{Svenska fyrar VHF/UHF}
+
+\subsection{Svenska fyrar VHF/UHF}
+
 \begin{longtable}{llrlrrrlrll}
 	Signal   & Placering           &   Frekvens & Loc    &    P & MASL & MAGL & Dir     &  Band & Mode   & Dist \\ \hline
 	SKØCT/B  & Stockholm           &  5760.9030 & JO99JX &   80 &   60 &   30 & Omni    &   6cm & CW     & 0    \\
@@ -687,7 +660,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	SK7GH/B  & Värnamo             &  1296.8250 & JO77AE &   10 &  230 &   10 & Omni    &  23cm & CW     & 7
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 0}
+\subsection{Repeatrar distrikt 0}
 \begin{longtable}{llllrrl}
 	Typ      & Modulation & Signal   & Ort             & Utfrekvens &   Duplex & Loc    \\ \hline
 	Hotspot  & D-Star     & SKØAI-B  & Stockholm       &   433.4625 &  Simplex & JO89XG \\
@@ -759,7 +732,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & C4FM       & SKØMG/R  & Sthlm/Söderort  &   434.6375 &   -2.000 & JO99AH
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 1}
+\subsection{Repeatrar distrikt 1}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation & Signal   & Ort   & Utfrekvens &  Duplex & Loc    &  \\ \hline
@@ -768,7 +741,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & FM/C4FM    & SK1BL/R  & Endre &   145.7750 & -600kHz & 1750   & QRV & JO97FO
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 2}
+\subsection{Repeatrar distrikt 2}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation         & Signal    & Ort                     & Utfrekvens &  Duplex & Loc    &  &  \\ \hline
@@ -810,7 +783,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & FM                 & SJ2W      & Burträsk                &   434.9500 &  -2.000 & KP04HM &  &
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 3}
+\subsection{Repeatrar distrikt 3}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation      & Signal   & Ort                    & Utfrekvens &   Duplex & Loc    &  &  \\ \hline
@@ -864,7 +837,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & FM              & SK3W     & Österfärnebo           &   434.8500 &   -2.000 & JP80JH &  &
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 4}
+\subsection{Repeatrar distrikt 4}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation & Signal   & Ort                        & Utfrekvens &   Duplex & Loc    &  &  \\ \hline
@@ -918,7 +891,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & DMR        & SA4BHE-R & Smedjebacken               &   434.6375 &   -2.000 & JP70GD &  &
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 5}
+\subsection{Repeatrar distrikt 5}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation & Signal   & Ort                    & Utfrekvens &   Duplex & Loc    &  &  \\ \hline
@@ -980,7 +953,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & FM         & SK5RHT   & Linköping              &    29.6600 &   -0.100 & JO78XH &  &
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 6}
+\subsection{Repeatrar distrikt 6}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation      & Signal   & Ort                   & Utfrekvens &   Duplex & Loc    &  &  \\ \hline
@@ -1078,7 +1051,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	Repeater & FM/C4FM         & SK6WW/R  & Karlsborg             &   145.7625 &   -0.600 & JO78FM &  &
 \end{longtable}
 
-\subsubsection{Repeatrar distrikt 7}
+\subsection{Repeatrar distrikt 7}
 
 \begin{longtable}{llllrrlcl}
 	Typ      & Modulation      & Signal   & Ort                     & Utfrekvens &   Duplex & Loc    &  &  \\ \hline
@@ -1174,6 +1147,42 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 
 \normalsize
 
+
+\section{Scouters frekvenser, JOTA}
+
+Scouter finns ofta QRV under vissa helger, \textit{Jamboree On The Air, JOTA},
+förekommer några gånger per år. Här är en sammanställning av de
+standardfrekvenser scouter nyttjar om de inte kör repeatrar eller leta upp
+motstationer själva. Scouter kan antingen ha egna signaler, köra under
+tillfälliga signaler eller vara second operator åt med någon klubbsignal.
+
+\subsection{Nordiska scoutfrekvenser VHF}
+
+\begin{center}
+\begin{tabular}{lrr}
+	\textbf{Mode} & \textbf{Frekvens} & \textbf{Kanal} \\ \hline
+	FM            &      145.425  MHz &   V34 \\
+	SSB           &      144.240  MHz &  \\
+	CW            &      144.050  MHz &
+\end{tabular}
+\end{center}
+
+Jotan hålls alltid den 3:e hela (lördag och söndag) helgen i oktober varje år.
+Jotan startar officiellt vid invigningen på lördag förmiddag och slutar natten
+till måndagen klockan 00:00. Många börjar redan på fredagskvällen och avslutar
+på söndagseftermiddagen.
+
+Sändningar under denna tid förekommer från ocertifierade scouter som lånar
+klubbsignal, har en tillfällig signal utdelad, ibland lånar enskilda
+sändaramatörer ut sina signaler.
+
+Sändningarna skall dock alltid ske under direkt överinseende av en radioamatör
+men var beredd på att det kommer vara en viss ovana och ske en del misstag.
+Strunta i det och ge scouterna en kul radioupplevelse.
+
+\scriptsize
+
+
 \section{Begrepp i bandplanerna}
 
 \begin{itemize}
@@ -1218,8 +1227,11 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 \section{Bandplaner}
 
 \scriptsize
+
 \subsection{Bandplaner VHF--UHF}
-\subsubsection{Bandplan 6m 50--52 MHz}
+
+\subsection{Bandplan 6m 50--52 MHz}
+
 \begin{tabular}{rrrll}
 
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
@@ -1238,7 +1250,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
        &        &         &             & RF81 – RF99                                                  \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 2m 144--146 MHz}
+\subsection{Bandplan 2m 144--146 MHz}
 \begin{tabular}{rrrll}
 
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
@@ -1269,7 +1281,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 145.806  & 146.000   & 12 kHz  & All mode     & Exklusivt satellit                      \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 70cm 432--438 MHz}
+\subsection{Bandplan 70cm 432--438 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens} &          & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                               \\ \hline
 
@@ -1295,7 +1307,7 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 435.000  & 438.000  & 20 kHz  & All mode     & Exklusivt satellit\\
 \end{tabular}
 
-\subsubsection{Bandplan 23cm 1240--1300 MHz}
+\subsection{Bandplan 23cm 1240--1300 MHz}
 \begin{tabular}{rrrll}
 	\textbf{Frekvens}         &               & \textbf{BW} & \textbf{Trafik} & \textbf{Anmärkning}                                          \\ \hline
 	         1240.000         & 1243.250      & 20 kHz      & Alla moder      & 1240.000 - 1241.000 Digital kommunikation                    \\ \hline
@@ -1325,7 +1337,6 @@ Strunta i det och ge scouterna en kul radioupplevelse.
 	         1299.750         & 1300.000      & 20 kHz      & Alla moder      & 8 st FM/DV 25 kHz kan. 1299.775--1299.975
 \end{tabular}
 \normalsize
-\clearpage
 
 \section{Frekvenser HF}
 
@@ -1388,24 +1399,24 @@ kan bandet användas som man vill och det är på sina håll god aktivitet.
 
 Kom ihåg att inte överskrida effektbegränsningarna bara.
 
-\subsection{Amatörradiofrekvenser HF}
+\section{Amatörradiofrekvenser HF}
 
 Alla frekvenser i kHz, bandbredder i Hz.
 
-\subsubsection{Bandplan 2.2\,km, 135,7--137,8\,kHz}
+\subsection{Bandplan 2.2\,km, 135,7--137,8\,kHz}
 
 \begin{tabular}{rrrll}
 \textbf{Frekvens} &  & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 135,7 & 135,8 & 200 & CQ, QRSS, Digi & OBS! Högsta effekt 1W ERP. \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 600\,m, 472--479\,kHz}
+\subsection{Bandplan 600\,m, 472--479\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 472 & 479 & 200 & CW, QRSS, Digi & OBS! Högsta utstrålad effekt 1W EIRP \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 160\,m, 1810--2000\,kHz}
+\subsection{Bandplan 160\,m, 1810--2000\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 1810 & 1838 & 200  & CW         & Exklusivt för CW. Interkontinental trafik har prio. \\ \hline
@@ -1416,7 +1427,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 1950 & 2000 & 2700 & Alla moder & OBS! Max 10 W till ant.                             \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 80\,m, 3500--3800\,kHz}
+\subsection{Bandplan 80\,m, 3500--3800\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 3500 & 3510 & 200  & CW             & Exklusivt CW                         \\
@@ -1436,7 +1447,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \end{tabular}
 
 
-\subsubsection{Bandplan 60\,m, 5351\,5--5366,5\,kHz}
+\subsection{Bandplan 60\,m, 5351\,5--5366,5\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 5351\,5 & 5354\,0 &  200 & CW, Digimoder      & OBS! Högsta utstrålad effekt 15 W EIRP\\
@@ -1446,7 +1457,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &                    & max 20 Hz bandbredd\\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 40\,m, 7000--7200\,kHz}
+\subsection{Bandplan 40\,m, 7000--7200\,kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 7000 & 7040 & 200  & CW         & Exklusivt CW.                             \\
@@ -1461,7 +1472,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 7175 & 7200 & 2700 & Alla moder & Interkontinental DX-trafik prio           \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 30\,m, 10\,100--10\,150 kHz}
+\subsection{Bandplan 30\,m, 10\,100--10\,150 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 10\,100 & 10\,140 & 200 & CW       & CW exkl. Max 150 Watt på 30 m           \\
@@ -1469,7 +1480,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 10\,140 & 10\,150 & 500 & Smalband & Digimoder PSK 10142,150\,kHz. Ej Packet \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 20\,m, 14\,000--14\,350 kHz}
+\subsection{Bandplan 20\,m, 14\,000--14\,350 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 14\,000 & 14\,070 & 200  & CW         & Exklusivt CW                             \\
@@ -1485,7 +1496,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekvens 14 300                \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 17 m, 18\,068--18\,168 kHz}
+\subsection{Bandplan 17 m, 18\,068--18\,168 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -1498,7 +1509,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 18\,160              \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 15\,m, 21\,000--21\,450 kHz}
+\subsection{Bandplan 15\,m, 21\,000--21\,450 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 
@@ -1512,7 +1523,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
         &         &      &            & Global nödfrekv. 21\,360                            \\ \hline
 \end{tabular}
 
-\subsubsection{Bandplan 12\,m, 24\,890--24\,990 kHz}
+\subsection{Bandplan 12\,m, 24\,890--24\,990 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 24\,890 & 24\,915 & 200  & CW         & Exklusivt CW, QRP 24\,906                             \\ \hline
@@ -1523,7 +1534,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 \end{tabular}
 
 \small
-\subsubsection{Bandplan 10\,m, 28\,000-29\,700 kHz}
+\subsection{Bandplan 10\,m, 28\,000-29\,700 kHz}
 \begin{tabular}{rrrll}
 \multicolumn{2}{c}{\textbf{Frekvens}} & \textbf{BW} & \textbf{Trafik} & \textbf{Noteringar} \\ \hline
 28\,000 & 28\,070 & 200  & CW         & Exklusivt CW, QRS 28\,055, CW QRP 28\,060              \\ \hline
@@ -1548,7 +1559,7 @@ Alla frekvenser i kHz, bandbredder i Hz.
 %\end{landscape}
 \normalsize
 
-\subsection{JOTA---Jamboree on the air, scoutfrekvenser}
+\section{JOTA---Jamboree on the air, scoutfrekvenser}
 
 Scouterna har frekvenser på HF likväl som VHF/UHF som de aktiverar vid särskilda
 tillfällen ofta i tillsammans med en lokal amatörradioklubb eller vanliga
@@ -1590,7 +1601,7 @@ frekvenser som scouter använder.
 
 \clearpage
 
-\subsection{Marina MF/HF-frekvenser}
+\section{Marina MF/HF-frekvenser}
 
 De marina HF-banden är uppdelade på ett antal band. Det finns en
 generell kanalindelning med 3 kHz per kanal och SSB som
@@ -1601,7 +1612,7 @@ MF även benämnd gränsvåg i marina sammanahang är inte lika ofta
 används som den var en gång i tiden. Nedan listas de frekvenser som
 används i Sverige.
 
-\subsubsection{Svenska MF-kanaler}
+\subsection{Svenska MF-kanaler}
 
 \begin{longtable}{llrr}
 \textbf{Kanal} & \textbf{Placering} & \textbf{Skepp} & \textbf{Kust}  \\ \hline
@@ -1615,7 +1626,7 @@ MF5 & Bjuröklubb    & 2\,123 & 1\,779  \\
 MF6 & Grimeton      & 2\,135 & 1\,710
 \end{longtable}
 
-\subsubsection{Nödfrekvenser}
+\subsection{Nödfrekvenser}
 
 \begin{longtable}{lrr}
 \textbf{Band} & \textbf{Frekvens} & \textbf{DSC Frekvens}\\ \hline \endhead
@@ -1628,7 +1639,7 @@ HF12 & 12 290 & 12 577.0 \\
 HF16 & 16 429 & 16 804.5 \\
 \end{longtable}
 
-\subsubsection{Primära HF skepp-till-skepp}
+\subsection{Primära HF skepp-till-skepp}
 
 \begin{longtable}{lrrrrrrrr}
 \textbf{Kanal} & \textbf{HF4} & \textbf{HF6} & \textbf{HF8} &
@@ -1648,9 +1659,9 @@ G &       &       &       &        & 16 546 & 18 843 & 22 177 & 25 118 \\
 
 \clearpage
 
-\subsection{Fyrar}
+\section{Fyrar}
 
-\subsubsection{IBP -- International Beacon Project}
+\subsection{IBP -- International Beacon Project}
 
 Det finns flera olika typer av fyrar men för HF är IBP (International
 Beacon Project) intressant eftersom det ger operatören möjlighet att
@@ -1662,7 +1673,7 @@ IBP:s hemsida om du inte hör en fyr du brukar höra.
 Tabellen nedan visar anropssignaler och första sändningsslotten som
 fyren sänder, dvs SCHED för olika fyrar och frekvenser.
 
-\subsubsection{Lista över IBP-fyrar}
+\subsection{Lista över IBP-fyrar}
 
 \begin{table}[H]
 \centering
