Flyttade uppträdandet till först i trafikkapitlet.

--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -2,6 +2,73 @@
 
 I detta kapitel tittar vi närmare på hur radiotrafik bedrivs både för amatörradioband och andra band. Här finns också bokstaveringsalfabeten, både det svenska och det internationella, Q-koder och mycket annat som är radio\-trafik\-relaterat.
 
+\section{Uppträdande på banden}
+
+När vi kör amatörradio, PR-radio eller annan radio finns det ett antal saker
+att tänka på som har att göra med hur vi beter oss mot varandra på banden. Se
+detta som en guide till hur man bör uppträda på banden.
+
+En radioamatör eller annan radioanvändare måste vara \textbf{tolerant}. Vi
+delar frekvenser med många andra personer, en del av dem kommer inte ha samma
+uppfattning som du själv har om saker och ting. Här gäller det att vara
+tolerant, förstående och framför allt inte bli upprörd över personer som
+kanske inte beter sig som du önskade att de betedde sig.
+
+Radiooperatörer är normalt \emph{aldrig ensamma på banden} helt oavsett om
+någon svarar på ditt allmänna anrop eller ej så finns det i det närmaste
+\textbf{garanterat någon som lyssnar}.
+
+Tänk på vad du säger och att du undviker diskutera ämnen som kan verka
+\textbf{upprörande} eller \textbf{stötande}. Ämnen som bör undvikas är
+\textbf{religion} och livs\-å\-skå\-d\-ni\-ng, \textbf{politisk} ideologi,
+\textbf{ekonomiska} eller \textbf{sociala} frågor m.m. där motparter kan ha
+starka åsikter som inte nödvändigtvis stämmer med dina egna. Radion är inte ett
+agitationsrum för sådana frågor.
+
+\textbf{Svordomar}, \textbf{könsord} och liknande undviker vi helt. Språket
+skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är inte
+den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
+icke-amatörer som lyssnar, myndigheter som lyssnar och så vidare.
+
+Ha \textbf{förståelse} för att andra kanske inte har dina egna detaljkunskaper,
+professionalism med mera. Agera \textbf{ödmjukt} gentemot andra människor på
+banden.
+
+Blir du ändå upprörd, undvik att \emph{agera på det} över huvud taget. Sänd
+inte över annans sändning, s.k. ''gummitumme'', eller stör på annat vis för du
+är upprörd. Avsluta hellre QSO:t, byt frekvens eller återkom lite senare när
+du lugnat ned dig. Tänk på att \textit{de flesta konflikter orsakas av
+okunskap eller brist på förståelse}. \textbf{Agera vuxet} i sådana situationer
+och jobba för att \textbf{de-eskalera} situationen.
+
+En skicklig amatör \textit{lyssnar mycket innan sändning}. Vi anropar på ett
+korrekt sätt och avslutar på ett korrekt sätt. Vi försöker uppge våra respektive
+signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det en tendens att
+sluddra över signalerna framför allt på 2m och 70cm banden, gör inte
+det. Tydlighet är en vinning i sig.
+
+När någon ny i ringen inträder, räkna upp de deltagande signalerna så att
+personen tydligt får en bild av alla som är med och vem som är på turen före och
+efter hen.
+
+Vi pratar inte \textbf{nedvärderande} om personer varesig de är andra amatörer
+eller ej, eller en viss grupp av personer. Vi undviker \textbf{sexuella
+  anspelningar} och vitsar ''\textbf{under bältet}'' liksom allt för
+\textbf{personliga detaljer}. Amatörradion är främst
+för \textbf{tekniska diskussioner} av rent \textbf{privat natur} eller
+av \textbf{allmänt intresse för hobbyn}, tester och prov med mera.
+
+Undvik väldigt \textbf{långa sändningspass}. Ibland händer det saker hos dina
+motstationer som att de får ett viktigt telefonsamtal eller måste springa ut i
+köket för katten har rivit ner något, ett barn ramlar eller annat som gör att
+man måste kvickt lämna radion. Att \textbf{långprata} i sådana lägen gör det
+svårt att tala om ''QRX --- jag måste ta hand om en sak, anropar dig igen om 5
+min.''. Enstaka gånger kanske man behöver förklara något lite längre men gör det
+till en vana att lämna luckor så ofta som möjligt.
+
+\textbf{Nödtrafik har alltid prioritet} och måste respekteras på alla
+frekvenser.
+
 \section{Signaler och anrop}
 
 \subsection{Landsprefix}
@@ -271,72 +338,7 @@ grader per fält latitud. Varje sådant fält delas sedan in i 10x10 rutor som
 numreras 0-9 på vardera axeln. Dessa i sin tur delas sedan in i 24x24 smårutor
 som då får storleksordningen 2.5 grader latitud och 5 grader long. vardera.
 
-\section{Uppträdande}
 
-När vi kör amatörradio finns det ett antal saker att tänka på som har att göra
-med hur vi beter oss mot varandra på banden. Se detta som en guide till hur man
-bör uppträda på banden.
-
-En radioamatör måste vara \textbf{tolerant}. Vi delar frekvenser med många andra
-personer, en del av dem kommer inte ha samma uppfattning som du själv har om
-saker och ting. Här gäller det att vara tolerant, förstående och framför allt
-inte bli upprörd över personer som kanske inte beter sig som du önskade att de
-betedde sig.
-
-Radioamatörer är \emph{aldrig ensamma på banden} helt oavsett om någon svarar på
-ditt allmänna anrop eller ej så finns det i det närmaste \textbf{garanterat
-  någon som lyssnar}.
-
-Tänk på vad du säger och att du undviker diskutera ämnen som kan verka
-\textbf{upprörande} eller \textbf{stötande}. Ämnen som bör undvikas är
-\textbf{religion} och livs\-å\-skå\-d\-ni\-ng, \textbf{politisk} ideologi,
-\textbf{ekonomiska} eller \textbf{sociala} frågor m.m. där motparter kan ha
-starka åsikter som inte nödvändigtvis stämmer med dina egna. Radion är inte ett
-agitationsrum för sådana frågor.
-
-\textbf{Svordomar}, \textbf{könsord} och liknande undviker vi helt. Språket
-skall vara vårdat men behöver inte vara strikt. Tänk på att din motpart är inte
-den enda som lyssnar utan det finns \textit{andra amatörer som lyssnar},
-icke-amatörer som lyssnar, myndigheter som lyssnar och så vidare.
-
-Ha \textbf{förståelse} för att andra kanske inte har dina egna detaljkunskaper,
-professionalism med mera. Agera \textbf{ödmjukt} gentemot andra människor på
-banden.
-
-Blir du ändå upprörd, undvik att \emph{agera på det} över huvud taget. Sänd inte
-över annans sändning, s.k. ''gummitumme'', eller stör på annat vis för du är
-upprörd. Avsluta hellre QSO:t, byt frekvens eller återkom lite senare när du
-lugnat ned dig. Tänk på att \textit{de flesta konflikter orsakas av okunskap
-  eller brist på förståelse}. \textbf{Agera vuxet} i sådana situationer och
-jobba för att \textbf{de-eskalera} situationen.
-
-En skicklig amatör \textit{lyssnar mycket innan sändning}. Vi anropar på ett
-korrekt sätt och avslutar på ett korrekt sätt. Vi försöker uppge våra respektive
-signaler på ett \emph{tydligt och läsligt sätt}, i dag finns det en tendens att
-sluddra över signalerna framför allt på 2m och 70cm banden, gör inte
-det. Tydlighet är en vinning i sig.
-
-När någon ny i ringen inträder, räkna upp de deltagande signalerna så att
-personen tydligt får en bild av alla som är med och vem som är på turen före och
-efter hen.
-
-Vi pratar inte \textbf{nedvärderande} om personer varesig de är andra amatörer
-eller ej, eller en viss grupp av personer. Vi undviker \textbf{sexuella
-  anspelningar} och vitsar ''\textbf{under bältet}'' liksom allt för
-\textbf{personliga detaljer}. Amatörradion är främst
-för \textbf{tekniska diskussioner} av rent \textbf{privat natur} eller
-av \textbf{allmänt intresse för hobbyn}, tester och prov med mera.
-
-Undvik väldigt \textbf{långa sändningspass}. Ibland händer det saker hos dina
-motstationer som att de får ett viktigt telefonsamtal eller måste springa ut i
-köket för katten har rivit ner något, ett barn ramlar eller annat som gör att
-man måste kvickt lämna radion. Att \textbf{långprata} i sådana lägen gör det
-svårt att tala om ''QRX --- jag måste ta hand om en sak, anropar dig igen om 5
-min.''. Enstaka gånger kanske man behöver förklara något lite längre men gör det
-till en vana att lämna luckor så ofta som möjligt.
-
-\textbf{Nödtrafik har alltid prioritet} och måste respekteras på alla
-frekvenser.
 
 \section{Repeatrar}
 
