Börjar få lite stil på nya layouten nu.

--- a/rhb-full.tex
+++ b/rhb-full.tex
@@ -90,12 +90,15 @@ Version: \DokVersion\ \hfill \Initialer \hfill Datum: \DokumentDatum
 \cleardoublepage
 
 %%% Innehållsförteckning
+\setcounter{secnumdepth}{5}
+\setcounter{tocdepth}{5}
 \tableofcontents
 
 \newpage
 
 \setlength{\parskip}{0.5em}
 \setlength{\parindent}{0pt}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % diverse saker här som används i dokumentet %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
