--- a/tex/forord.tex
+++ b/tex/forord.tex
@@ -1,7 +1,50 @@
+\section*{Förord}
+
+Denna version av radiohandboken innehåller en stor mängt förändringar mot
+tidigare versioner. Dels har jag valt att ta bort de specifika VHF- och
+HF-versionerna av den och i stället bara inkludera allting i samma handbok för
+enkelthets skull. Jag har lagt vikt vid att i stället försöka göra det tydligt
+så den som inte är intresserad av vissa delar enkelt kan hoppa över dem.
+
+Det har också medfört en helt ny struktur och kapitelindelning på en högre
+nivå som gör att det är mer logiskt strukturerat. Alla frekvenslistor är
+flyttade till ett eget kapitel som gör det enklare att skriva ut dem medan
+reglemente och teknik osv fått helt egna kapitel.
+
+Ett index har skapats med indexering av de olika begreppen i boken så att det
+ska bli enklare att hitta. Denna indexering återfinns längst bak i boken med
+länkar så att man kan klicka sig fram i en PDF.
+
+Många frekvenslistor har blivit uppdaterade med nya frekvenser, information
+och kanaler, felaktigheter har korrigerats och jag hoppas att det mesta nu
+faktiskt är ganska korrekt!
+
+\todo{Skriv förord}
+
+\url{https://sikvall.se}
+
+Och kör radio där ute. Alltid med stil.
+
+\vspace{4mm}
+
+Karlholm, \DokumentDatum\\
+\textit{Täpp-Anders Sikvall\\
+	SM5UEI}
+
+\section*{Om författaren}
+
+Jag heter Täpp Anders Sikvall och har haft ett radiointresse sedan
+barnsben. När jag gick i gymnasiet tog jag amatörradiolicens efter dåtidens
+regler och har sedan haft amatörradio som en hobby.
+
+Jag jobbar också professionellt med radiosystem och på fritiden tycker jag om
+att gå i skog och mark (och köra portabelt). Jag utbildar också nya
+radioamatörer och är även en av SSA:s provförrättare.
+
 \section*{Licens}
 
-Denna handbok är författad av Täpp Anders Sikvall, SM5UEI. Den är släppt under
-en creative commons licens som kallas för CC BY-NC-SA.
+Denna handbok är författad av Täpp Anders Sikvall, SM5UEI. Den är
+släppt under en creative commons licens som kallas för CC BY-NC-SA.
 
 I korthet innebär det att du får distribuera och trycka upp materialet
 hur du vill, dela med dig av det men inte för kommersiella ändamål. Du
@@ -15,30 +58,6 @@ För fullständig information kan du besöka \\
 
 Licensen gäller alla versioner av radiohandboken, alla utgåvor och
 alla utdrag ur den.
-
-\section*{Om författaren}
-
-Jag heter Täpp Anders Sikvall och har haft ett radiointresse sedan barnsben. När
-jag gick i gymnasiet tog jag amatörradiolicens efter dåtidens regler och har
-sedan haft amatörradio som en hobby.
-
-Jag jobbar också professionellt med radiosystem och på fritiden tycker jag om
-att gå i skog och mark (och köra portabelt). Jag utbildar också nya
-radioamatörer och är även en av SSA:s provförrättare.
-
-\section*{Förord}
-
-\todo{Skriv förord}
-
-\url{https://sikvall.se}
-
-Och kör radio där ute. Alltid med stil.
-
-\vspace{4mm}
-
-Karlholm, \DokumentDatum\\
-\textit{Täpp-Anders Sikvall\\
-	SM5UEI}
 
 \clearpage
 
