--- a/tex/kap-reglemente.tex
+++ b/tex/kap-reglemente.tex
@@ -41,7 +41,7 @@ att få använda amatörradio, annat än att den som opererar radioutrustningen
 skall ha, eller stå under uppsikt av, en person med giltigt
 amatörradiocertifikat.
 
-\section{Undantag från tillståndsplikt}
+\subsection{Undantag från tillståndsplikt}
 
 I sverige regleras all radioanvändning med sändare som inte kräver att man
 söker tillstånd för det i en skrift som ges ut av Post- och Telestyrelsen
@@ -68,7 +68,7 @@ uppfylla villkoren och här blir det ofta en del problem med gråimporterade
 radioapparater från asien som ibland kan ha förskräckligt dåliga sändare. Det är
 straffbart att använda icke godkänd radioutrustning.
 
-\section{Amatörradiocertifikat}
+\section{Amatörradio}
 
 Amatörradio har en lång historia och sträcker sig tillbaka till radions
 barndom. Rent formellt så var det i USA i slutet av 1890-talet som radioamatörer
@@ -243,5 +243,3 @@ ganska snart.
 Enligt myndigheten för samhällsskydd och beredskap (MSB) planerar man avveckla
 RAKEL till 2030 men sannolikt kommer det ta lite länge än så innan SWEN är helt
 redo att ersätta det.
-
-\clearpage
