--- a/tex/kap-teknik.tex
+++ b/tex/kap-teknik.tex
@@ -463,7 +463,7 @@ UKV            & Ultrakortvåg  & 88--108                     & MHz \\
 	\caption{Nyare IEEE-benämningar på frekvensband}
 \end{table}
 
-\subsubsection{Rundradioband}
+\subsection{Rundradioband}
 
 \begin{table}[H]
 	\centering
@@ -485,7 +485,7 @@ För radioamatörer delar man in frekvensbanden i långvåg, mellanvåg, kortvå
 VHF, UHF och SHF beroende på frekvens, se tabellen under avsnitt
 \ref{frekvens-vaglangd}. Dessa har lite olika utbredningsegenskaper.
 
-\subsubsection{Långvåg}
+\subsection{Långvåg}
 
 Markvågsutbredning, relativt höga sändareffekter, tillförlitliga
 för\-bind\-el\-ser men i övre delen av frekvensbandet kortare förbindelser
@@ -493,7 +493,7 @@ dagtid. På de lägsta frekvenserna erhålls med hög sändareffekt goda förbin
 på stora avstånd globalt och används även för t.ex. malmprospektering,
 kommunikation med ubåtar i undervattensläge.
 
-\subsubsection{Mellanvåg}
+\subsection{Mellanvåg}
 
 Kombinerar egenskaperna hos angränsande delar av lång- och kortvåg, kan ge
 kraftig interferens mellan rymd- och markvåg som då ofta upplevs som markerad
@@ -512,7 +512,7 @@ frekvensområdet, det vill säga, förbindelser via rymdvåg på korta avstånd
 mellan 100--300\,km är möjliga även dagtid också under perioder med högre
 solaktivitet.
 
-\subsubsection{Kortvåg}
+\subsection{Kortvåg}
 
 God rymdvågsutbredning med mycket lång räckvidd redan med låg effekt men
 samtidigt starkt avhängigt radiokonditionerna som styrs i väldigt hög grad av
@@ -530,7 +530,7 @@ fortfarande ett ganska stort antal kanaler och det finns några sändare kvar
 för BBC i UK och även tyskland men det är tveksamt om de lever kvar ens om
 några år. I stället har ju Internet tagit över som nyhetsförmedlare.
 
-\subsubsection{Ultrakortvåg (UKV) eller väldigt hög frekvens (VHF)}
+\subsection{Ultrakortvåg (UKV) eller väldigt hög frekvens (VHF)}
 
 Förbindeleser med låg effekt och små antenner, oberoende av jonosfären men då
 endast i form av frirumsutbredning, dvs fram till horisonten och under påverkan
@@ -543,7 +543,7 @@ satelliter och rymdstationer på frekvenserna över ca 100\,MHz. Amatörradioban
 på 144--146\,MHz (2-metersbandet) har en avdelning frekvenser vikta för
 rymdkommunikaton.
 
-\subsubsection{Ultrahög frekvens (UHF)}
+\subsection{Ultrahög frekvens (UHF)}
 
 Bandet är ett av de mest populära för landmobil radio. I dag rymms i detta band
 mellan 300--3000\- \,MHz nära nog all landmobil professionell kommunikation då
@@ -571,9 +571,9 @@ Det är också ett populärt band för satellitkommunikation.
 
 \todo{Kolla om rätt indentering rubrikmässigt}
 
-\subsection{Radioberäkningar för VHF och UHF}
+\section{Radioberäkningar för VHF och UHF}
 
-\subsubsection{Beräkning av radiohorisonten}
+\subsection{Beräkning av radiohorisonten}
 
 Radiohorisonten är den sträcka som markvågen kan nå utan särskilda hjälpmedel och i frånvaro av andra effekter som särskilda kondisioner (tropo eller duktning) och liknande. Avståndet kan beräknas med hjälp av en enkel formel. Radiohorisonten gäller egentligen bara när inget annat är i vägen men kan ge en ledning till den längsta utbredning man kan förvänta sig med markvåg givet en viss höjd.
 
@@ -585,7 +585,7 @@ För skepp på havet stämmer radiohorisonten ganska väl så man hittar denna f
 
 Där $r$ är avståndet till radiohorisonten givet i kilometer, $h_1$ är den ena stationens antennhöjd över marken givet i meter och $h_2$ är den andra stationens antennhöjd över marken också givet i meter.
 
-\subsubsection{Sträckdämpning}
+\subsection{Sträckdämpning}
 
 Sträckdämpningen beror på flera olika faktorer, inte minst terrängen och det som finns mellan sändaren och mottagaren. I den fria rymden följer den en enkel geometrisk utbredning men närmare marken behöver man stoppa in en del kompensationsfaktorer.
 
@@ -620,4 +620,3 @@ Där $PL_m$ är sträckdämpningen vid marken. Faktorn $k$ kan uppskattas enligt
 \end{table}
 
 I vanlig svensk terräng är det nog vanligast man hamnar i storleksordningen 5--10.
-
