--- a/tex/kap-trafik.tex
+++ b/tex/kap-trafik.tex
@@ -178,7 +178,7 @@ Sverige delas in i följande distrikt efter sina län:
 \caption{Distriktssiffor i Sverige}
 \end{table}
 
-\subsubsection{Karta över svenska amatörradiodistrikt}
+\subsection{Karta över svenska amatörradiodistrikt}
 
 \begin{figure}
 	\centering
